# OneApp

./: .editorconfig  .gitignore  CONTRIBUTING.md  Cargo.toml  LICENSE  README.md  SECURITY.md
.github/workflows/: ci.yml  release.yml
src/: api.rs  main.rs  models.rs  reader.rs  reader_view.rs  scroll_tests.rs  theme.rs
