[package]
name = "oneapp"
version = "0.1.0"
edition = "2021"

[dependencies]
gpui = { git = "https://github.com/zed-industries/zed", rev = "v0.168.2" }
reqwest = { version = "0.12", features = ["json", "blocking"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
chrono = { version = "0.4", default-features = false, features = ["clock", "std"] }
html-escape = "0.2"
regex = "1.10"
url = "2.5"
open = "5"
futures = "0.3"
smol = "1.3"
